# RL4RedTeam

./: .gitignore  .gitmodules  PPO_CartPole-v1.pth  README.md  defensive_mechanism.md  pyproject.toml  requirements.txt
Algo/mp-env/: envs.py  envs_core.py  main.py  model.py  ppo.py  utils.py
Algo/off-policy/DQN-Atari-Agents-master/: README.md
Algo/off-policy/d3qn/: agent.py  control.py  main.py  plot.py
Algo/on-policy/single-files/: ppo-asattn-lstm-mask.py  ppo-asattn-lstm.py  ppo-coverage.py  ppo-memory-coverage.py  ppo-memory.py  ppo-multi-discrete-mask.py  ppo-multi-discrete.py  ppo-origin.py  ppo-single-mask.py  ppo.py  utils.py
Algorighms/network_generator/: network_generator.py  network_generator_clean.py
Algorighms/off-policy/DQN-Atari-Agents-master/: run_atari_dqn.py
Algorighms/off-policy/d3qn/: buffer.py  environment.py  main.py
Algorighms/on-policy/clearrl-ppo/: ppo_rnd_envpool.py
Algorighms/on-policy/single-files/: ATROS.py  ppo-asattn-lstm.py  ppo-coverage-nasim:Medium-PO-v0.out  ppo-coverage.py  ppo-memory-coverage-nasim:Medium-v0.out  ppo.py  (+6 more)
algo/: clap-transformer-single-gpu.py  clap.py  ppo-coverage.py  utils.py
d3qn/: control.py  environment.py  my_utils.py  nerual_network.py
helper/: controllable_random.py  plot.py  random_flip.md  random_flip.py  teat.py
logs/print_logs/: nasim-Pocp2Gen-ppo-as-attention.out
ppo-rnd-general/: ppo-rnd-general.py
ppo-rnd-vec/: agent.py  clap.py  distribution.py  eps_control.py  memory.py  networks.py  utili.py
sb3-benchmark/: random_sampler.py  run.py  sb3-rl.py
trash_bin/vmpo/: vmpo.py
(+16 files in other folders)
